# gluemap

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md  demo.py  justfile  pixi.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
benchmark/: __init__.py  evaluate.py  run_benchmark.py  run_benchmark_multi.py  utils.py
configs/: base.yaml  benchmark_base.yaml  eth3d_train.yaml  example.yaml  l4_lowmem.yaml  lamar.yaml  tomato_l4_smoke.yaml
docs/: local_patches.md  onboarding.md
gluemap/: __init__.py  cli.py
gluemap/controllers/: augmented_bundle_adjustment.py  base_inference.py  global_merger.py  global_refinement.py  gluemap_impl.py  image_retrieval.py  star_collection.py  star_inference.py  twoview_inference.py
gluemap/datasets/: base.py  multi_sequence_twoview.py  sequential_twoview.py  star.py  twoview.py  utils.py
gluemap/estimators/: __init__.py  augmented_bundle_adjustment.py  covisibility_extraction.py  feature_extraction.py  intrinsics_averaging.py  rotation_averaging.py  similarity_averaging.py  track_establishment.py  track_inference.py  track_snapping.py  virtual_tracks.py
gluemap/eval/: ablations_backbone.py  ablations_filtering.py  ablations_pure_feedforward.py  ablations_tracks.py
gluemap/ff_inference/: __init__.py  local_inference.py  mapanything_inference.py  pi3_inference.py  vggt_inference.py
gluemap/math/: geometry.py  mst_initialization.py  reprojection_error.py  scaling.py  union_find.py
gluemap/pybind/: CMakeLists.txt  bindings.cc  cost_functions.h  pybind_utils.h  track_selection.cc
gluemap/utils/: cli.py  colmap.py  gpu.py  load_fn.py  model_loader.py
patches/: ceres-respect-cuda-architectures.patch  colmap-openimageio-ubuntu2004.patch  doppelgangers-mast3r-torch-load.patch
reports/: workdoc_Jun05-2026_gluemap_pr3_l4_tomato_reconstruction.md
scripts/: configure_cuda_project.sh  download_checkpoints.sh  install_pycolmap.sh  make_image_subset.py  patch_ceres_cuda_arch.py  patch_colmap_system_openimageio.py
scripts/format/: c++.sh  python.sh
tests/: conftest.py  helpers.py  test_angular_error_filter.py  test_augmented_bundle_adjustment.py  test_colmap_feature_database.py  test_geometry.py  test_intrinsics_averaging.py  test_intrinsics_mode_bucketing.py  test_mst_initialization.py  test_pygluemap_track_pruning.py  test_reprojection_error.py  test_reprojection_error_focal.py  test_scaling.py  test_similarity_averaging.py  test_union_find.py
